# wealth-insights-assitant

./: .gitignore  LICENSE  README.md  pytest.ini
.github/workflows/: dev.yml  prod.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: factory.py
backend/app/api/v1/: dependencies.py  routers.py
backend/app/core/: config.py  logger.py
backend/app/schemas/: query.py
backend/app/services/: currency.py  retriever.py
backend/scripts/: scrape_bce.py
backend/tests/: test_ask.py  test_health.py  test_loader.py  test_services.py
data/: faiss.faiss  faiss.pkl
deployments/: docker-compose.yml
frontend/: next.config.ts  package.json  tailwind.config.js  tsconfig.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/upload-pdfs/: route.ts
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/components/: AuthGate.tsx  ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx  FileUpload.tsx  ThemeProvider.tsx
frontend/src/components/ui/: ThemeToggle.tsx
frontend/src/lib/: utils.ts
frontend/src/styles/: globals.css
frontend/src/types/: chat.ts
scripts/: load_pdfs.py
